<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/create_people_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/create_general_margin"
                android:text="@string/create_people"
                android:textAllCaps="true"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/title"
                android:layout_marginLeft="@dimen/create_general_margin"
                android:layout_marginRight="@dimen/create_general_margin"
                android:layout_marginTop="@dimen/create_general_margin"
                android:text="@string/select_person_type" />

            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/type_label"
                android:layout_marginBottom="@dimen/create_general_margin"
                android:layout_marginLeft="@dimen/create_general_margin"
                android:layout_marginRight="@dimen/create_general_margin"
                android:layout_marginTop="@dimen/create_general_margin"
                android:entries="@array/people_type" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/type"
                android:layout_margin="@dimen/create_general_margin"
                android:layout_marginTop="@dimen/create_header_margin"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/name"
                android:layout_margin="@dimen/create_general_margin"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/attribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/age"
                android:layout_margin="@dimen/create_general_margin"
                android:ems="10"
                android:hint="@string/teaches_grade"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/create_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/attribute"
                android:layout_margin="@dimen/create_general_margin"
                android:padding="@dimen/create_general_margin"
                android:paddingLeft="@dimen/create_large_margin"
                android:paddingRight="@dimen/create_large_margin"
                android:text="@string/create" />

            <Button
                android:id="@+id/edit_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/attribute"
                android:layout_margin="@dimen/create_general_margin"
                android:padding="@dimen/create_general_margin"
                android:paddingLeft="@dimen/create_large_margin"
                android:paddingRight="@dimen/create_large_margin"
                android:text="@string/edit" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>